# Mix-Checker

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installer/: windows.iss
